[package]
name = "workflow"
version = "0.1.0"
authors = ["Fijiisland <hengyiyu2018@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"       # linear algebra
image = "0.23.14"         # image process
minifb = "0.19.3"         # canvas handler
egui = "0.11.0"           # gui

objcracker = {path = "../objcracker"}